--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=740, initial-scale=1, shrink-to-fit=no, user-scalable=no">
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   <title>index</title>
   <link rel="stylesheet" href="css/app.css">
@@ -54,7 +54,7 @@
 </div>
 </header>
 
-<section>
+<section id="studio">
   <div class="container mod_upper">
     <div class="row">
       <div class="col-md-6 mod_flex">
@@ -64,13 +64,85 @@
         </div> 
       </div>
       <div class="col-md-6">
-        <!-- <img src="img/main_model.JPG" class="img-fluid" alt=""> -->
-        <div class="main-girl"></div>
+        <img src="img/main_model.JPG" class="main-girl" alt="">
       </div>
     </div>
   </div>
-  <!-- <div class="main-girl"></div> -->
 </section>
+
+<section id="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6"><img class="img-fluid" style="" src="img/1.png" alt=""></div>
+      <div class="col-md-6">
+        <p>— About Anastasia Aleksova</p>
+        <p>STUDIO FOUNDER</p>
+        <p>Russian born, UK based Anastasia is a professional lingerie designer & pattern technologist with a Degree in Design & Technology. </p>
+        <p>Most of her career has been focused on industrial pattern making. The biggest achievement so far has been the opening of the production line for the largest retailer of lingerie in Russia "Wild Orchid". In her last role she was in charge of the department of technical design, pattern cutting, and sample production. She worked a lot with the designers and brand managers throughout the process.</p>
+        <p>Having been always interested in Art and Design, she finished the course Lingerie and Swimwear Design at UAL London College of fashion and then decided to open her own Design Lingerie Studio. It is called "La vie de la Lingerie" (Life of Lingerie) because it cover all aspects of creating lingerie, its whole lifecycle.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="education">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="text-block_1">
+          <p><span>— Vision</span><span>Design is</span></p>
+          <p><span>Creativity+ <br>Engineering</span></p>
+        </div>
+        <div class="education-block">
+          <p>EDUCATION</p>
+          <p>Master class in <br>Russian Love Birds Bra</p>
+          <p>How to sew a bra from A to Z</p>
+          <a class="education-button" href="">VIEW MASTER CLASS</a>
+          <img src="img/3.png" class="img-fluid"  alt="">
+        </div>
+      </div>
+      <div class="col-md-6"><img class="img-fluid" src="img/2.png" alt=""></div>
+    </div>
+  </div>
+</section>
+
+<section id="clients">
+  <div class="container">
+    <div class="row">
+      <div class="col"><span>— Our clients</span></div>
+    </div>
+
+    <div class="row justify-content-around ">
+      <div class="col-md-12 hidden-lg-down">
+        <div class="mod_flex_clients ">
+          <img src="img/log1.png" alt="" class="img-fluid">
+          <img src="img/log2.png" alt="" class="img-fluid">
+          <img src="img/log3.png" alt="" class="img-fluid">
+          <img src="img/log4.png" alt="" class="img-fluid">
+          <img src="img/log5.png" alt="" class="img-fluid">
+          <img src="img/log6.png" alt="" class="img-fluid">
+        </div>
+      </div>
+      <div class="col-md-12 hidden-xl-up">
+        <div class="mod_flex_clients ">
+          <img src="img/log1.png" alt="" class="img-fluid">
+          <img src="img/log2.png" alt="" class="img-fluid">
+          <img src="img/log3.png" alt="" class="img-fluid">
+        </div>
+      </div>
+      <div class="col-md-12 hidden-xl-up">
+        <div class="mod_flex_clients ">
+          <img src="img/log4.png" alt="" class="img-fluid">
+          <img src="img/log5.png" alt="" class="img-fluid">
+          <img src="img/log6.png" alt="" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 <footer>
 
 </footer>
