--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=0, shrink-to-fit=no, user-scalable=yes">
+  <meta name="viewport" content="width=740, initial-scale=0, shrink-to-fit=no, user-scalable=yes">
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   <title>index</title>
   <link rel="stylesheet" href="css/app.css">
