--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=740, initial-scale=0, shrink-to-fit=no, user-scalable=yes">
+  <!-- <meta name="viewport" content="initial-scale=1"> -->
+  <meta name="viewport" content="width=780">
+  <!-- <meta name="viewport" content="initial-scale=1, width=device-width, shrink-to-fit=no, user-scalable=no, width=940"> -->
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   <title>index</title>
   <link rel="stylesheet" href="css/app.css">
@@ -64,7 +66,8 @@
         </div> 
       </div>
       <div class="col-md-6">
-        <img src="img/main_model.JPG" class="main-girl" alt="">
+        <!-- <img src="img/main_model.JPG" class="main-girl" alt=""> -->
+        <div class="main-model"></div>
       </div>
     </div>
   </div>
@@ -106,13 +109,13 @@
   </div>
 </section>
 
-<section id="clients">
+<section id="clients" style="display: none">
   <div class="container">
     <div class="row">
       <div class="col"><span>— Our clients</span></div>
     </div>
 
-    <div class="row justify-content-around ">
+    <div class="row justify-content-around">
       <div class="col-md-12 hidden-lg-down">
         <div class="mod_flex_clients ">
           <img src="img/log1.png" alt="" class="img-fluid">
