--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
           </div>
         </div>
         <div class="col-xs-12">
-          <div class="mod_flex_clients ">
+          <div class="mod_flex_clients lower">
             <img src="img/log4.png" alt="" class="img-fluid">
-            <img src="img/log5.png" alt="" class="img-fluid">
             <img src="img/log6.png" alt="" class="img-fluid">
+            <img src="img/log5.png" alt="" class="img-fluid">
           </div>
         </div>
       </div>
