--- a/portfolio.html
+++ b/portfolio.html
@@ -116,14 +116,54 @@
 			</div>
 			<div class="collection-1">
 				<div class="row">			
-					<div class="col-xs-6"><img src="img/modal_img/1.jpg" alt="" id="modal1" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/modal_img/2.jpg" alt="" id="modal2" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/modal_img/3.jpg" alt="" id="modal3" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/modal_img/4.jpg" alt="" id="modal4" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/modal_img/5.jpg" alt="" id="modal5" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/modal_img/6.jpg" alt="" id="modal6" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/modal_img/7.jpg" alt="" id="modal7" class="img-fluid"></div>
-					<div class="col-xs-6"><img src="img/modal_img/8.jpg" alt="" id="modal8" class="img-fluid"></div>
+					<div class="col-xs-6">
+						<div class="item-hover">
+							<div class="hover-text">EXPLORE COLLECTION</div>
+							<img src="img/modal_img/1.jpg" alt="" id="modal1" class="img-fluid">
+						</div>
+					</div>		
+					<div class="col-xs-6">
+						<div class="item-hover">
+							<div class="hover-text">EXPLORE COLLECTION</div>
+							<img src="img/modal_img/2.jpg" alt="" id="modal2" class="img-fluid">
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="item-hover">
+							<div class="hover-text">EXPLORE COLLECTION</div>
+							<img src="img/modal_img/3.jpg" alt="" id="modal3" class="img-fluid">
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="item-hover">
+							<div class="hover-text">EXPLORE COLLECTION</div>
+							<img src="img/modal_img/4.jpg" alt="" id="modal4" class="img-fluid">
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="item-hover">
+							<div class="hover-text">EXPLORE COLLECTION</div>
+							<img src="img/modal_img/5.jpg" alt="" id="modal5" class="img-fluid">
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="item-hover">
+							<div class="hover-text">EXPLORE COLLECTION</div>
+							<img src="img/modal_img/6.jpg" alt="" id="modal6" class="img-fluid">
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="item-hover">
+							<div class="hover-text">EXPLORE COLLECTION</div>
+							<img src="img/modal_img/7.jpg" alt="" id="modal7" class="img-fluid">
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="item-hover">
+							<div class="hover-text">EXPLORE COLLECTION</div>
+							<img src="img/modal_img/8.jpg" alt="" id="modal8" class="img-fluid">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -160,7 +200,7 @@
 		</div>
 	</section>
 
-<section id="lingerie-techonogist_wild_orchid">
+	<section id="lingerie-techonogist_wild_orchid">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs"><div class="text-mod-1">— Lingerie technologist for “Wild Orchid”</div></div>
@@ -187,7 +227,7 @@
 		</div>
 	</section>
 
-<section id="lingerie-techonogist_man" style="margin-bottom:35px;">
+	<section id="lingerie-techonogist_man" style="margin-bottom:35px;">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs"><div class="text-mod-1">— Lingerie technologist for “Wild Orchid”</div></div>
