--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 							<nav>
 								<ul>
 									<li><a href="">ABOUT</a></li>
-									<li><a class="dropdown">PORTFOLIO <img src="img/down-arrow-dark-black.png" alt=""></a>
+									<li><a class="dropdown">PORTFOLIO <img src="img/down-arrow-dark-black.png" class="hidden-lg-down" alt=""></a>
 										<ul class="hidden-items">
 											<li><a href="">— Lingerie designer</a></li>
 											<li><a href="">— Lingerie technologist</a></li>
@@ -119,49 +119,49 @@
 					<div class="col-xs-6">
 						<div class="item-hover">
 							<div class="hover-text">EXPLORE COLLECTION</div>
-							<img src="img/modal_img/1.jpg" alt="" id="modal1" class="img-fluid">
+							<img src="img/modal_img/1.jpg" alt="" id="modal-window_1" modal-target="modal1" class="img-fluid">
 						</div>
 					</div>		
 					<div class="col-xs-6">
 						<div class="item-hover">
 							<div class="hover-text">EXPLORE COLLECTION</div>
-							<img src="img/modal_img/2.jpg" alt="" id="modal2" class="img-fluid">
+							<img src="img/modal_img/2.jpg" alt="" id="modal-window_2" modal-target="modal2" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="item-hover">
 							<div class="hover-text">EXPLORE COLLECTION</div>
-							<img src="img/modal_img/3.jpg" alt="" id="modal3" class="img-fluid">
+							<img src="img/modal_img/3.jpg" alt="" id="modal-window_3" modal-target="modal3" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="item-hover">
 							<div class="hover-text">EXPLORE COLLECTION</div>
-							<img src="img/modal_img/4.jpg" alt="" id="modal4" class="img-fluid">
+							<img src="img/modal_img/4.jpg" alt="" id="modal-window_4" modal-target="modal4" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="item-hover">
 							<div class="hover-text">EXPLORE COLLECTION</div>
-							<img src="img/modal_img/5.jpg" alt="" id="modal5" class="img-fluid">
+							<img src="img/modal_img/5.jpg" alt="" id="modal-window_5" modal-target="modal5" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="item-hover">
 							<div class="hover-text">EXPLORE COLLECTION</div>
-							<img src="img/modal_img/6.jpg" alt="" id="modal6" class="img-fluid">
+							<img src="img/modal_img/6.jpg" alt="" id="modal-window_6" modal-target="modal6" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="item-hover">
 							<div class="hover-text">EXPLORE COLLECTION</div>
-							<img src="img/modal_img/7.jpg" alt="" id="modal7" class="img-fluid">
+							<img src="img/modal_img/7.jpg" alt="" id="modal-window_7" modal-target="modal7" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="item-hover">
 							<div class="hover-text">EXPLORE COLLECTION</div>
-							<img src="img/modal_img/8.jpg" alt="" id="modal8" class="img-fluid">
+							<img src="img/modal_img/8.jpg" alt="" id="modal-window_8" modal-target="modal8" class="img-fluid">
 						</div>
 					</div>
 				</div>
@@ -246,6 +246,261 @@
 			</div>
 		</div>
 	</section>
+
+	<div id="modal1" class="modal">
+		<div class="modal-wrapper">
+			<div class="container">
+				<div class="row" style="align-self:center">
+					<div class="col-xs-11"><div class="modal-text">— Witch Hunt Collection</div></div>
+					<div class="col-xs-1 modal-flex-center"><img class="close-modal" src="img/close.png" alt=""></div>
+				</div>
+				<section class="gallery">
+					<div class="row">		
+<!-- left column  -->
+					<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/Witch Hunt Collection/2.jpg" alt="">
+								<img class="img-fluid" src="img/lingerie designer/Witch Hunt Collection/4.jpg" alt="">
+							</div>
+						</div>					
+					</div>
+<!-- right column -->
+						<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/Witch Hunt Collection/3.jpg" alt="">
+								<img class="img-fluid" src="img/lingerie designer/Witch Hunt Collection/5.jpg" alt="">
+							</div>
+						</div>						
+						</div>
+
+					</div>
+				</section>
+			</div>
+
+		</div>
+	</div>
+
+	<div id="modal2" class="modal">
+		<div class="modal-wrapper">
+			<div class="container">
+				<div class="row" style="align-self:center">
+					<div class="col-xs-11"><div class="modal-text">— La décadence Collection</div></div>
+					<div class="col-xs-1 modal-flex-center"><img class="close-modal" src="img/close.png" alt=""></div>
+				</div>
+				<section class="gallery">
+					<div class="row">		
+<!-- left column  -->
+					<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/La décadence Collection/2.jpg" alt="">
+							</div>
+						</div>					
+					</div>
+<!-- right column -->
+						<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/La décadence Collection/3.jpg" alt="">
+							</div>
+						</div>						
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+
+<div id="modal3" class="modal">
+		<div class="modal-wrapper">
+			<div class="container">
+				<div class="row" style="align-self:center">
+					<div class="col-xs-11"><div class="modal-text">— The Naughty Side of 18th century Collection</div></div>
+					<div class="col-xs-1 modal-flex-center"><img class="close-modal" src="img/close.png" alt=""></div>
+				</div>
+				<section class="gallery">
+					<div class="row">		
+<!-- left column  -->
+					<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/The Naughty Side of 18th century Collection/2.jpg" alt="">
+								<img class="img-fluid" src="img/lingerie designer/The Naughty Side of 18th century Collection/5.jpg" alt="">
+							</div>
+						</div>					
+					</div>
+<!-- right column -->
+						<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/The Naughty Side of 18th century Collection/3.jpg" alt="">
+								<img class="img-fluid" src="img/lingerie designer/The Naughty Side of 18th century Collection/4.jpg" alt="">
+							</div>
+						</div>						
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+
+<div id="modal4" class="modal">
+		<div class="modal-wrapper">
+			<div class="container">
+				<div class="row" style="align-self:center">
+					<div class="col-xs-11"><div class="modal-text">— Threads and Strokes</div></div>
+					<div class="col-xs-1 modal-flex-center"><img class="close-modal" src="img/close.png" alt=""></div>
+				</div>
+				<section class="gallery">
+					<div class="row">		
+<!-- left column  -->
+					<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/Threads and Strokes/2.jpg" alt="">
+								<img class="img-fluid" src="img/lingerie designer/Threads and Strokes/4.jpg" alt="">
+							</div>
+						</div>					
+					</div>
+<!-- right column -->
+						<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/Threads and Strokes/3.jpg" alt="">
+							</div>
+						</div>						
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+
+<div id="modal5" class="modal">
+		<div class="modal-wrapper">
+			<div class="container">
+				<div class="row" style="align-self:center">
+					<div class="col-xs-11"><div class="modal-text">— Lobster Collection</div></div>
+					<div class="col-xs-1 modal-flex-center"><img class="close-modal" src="img/close.png" alt=""></div>
+				</div>
+				<section class="gallery">
+					<div class="row">		
+<!-- left column  -->
+					<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/Lobster Collection/1.jpg" alt="">
+							</div>
+						</div>					
+					</div>
+<!-- right column -->
+						<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+									<img class="img-fluid" src="img/lingerie designer/Lobster Collection/Lobster Girl Side.png" alt="">
+							</div>
+						</div>						
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+
+<div id="modal6" class="modal">
+		<div class="modal-wrapper">
+			<div class="container">
+				<div class="row" style="align-self:center">
+					<div class="col-xs-11"><div class="modal-text">— Monet's House Collection</div></div>
+					<div class="col-xs-1 modal-flex-center"><img class="close-modal" src="img/close.png" alt=""></div>
+				</div>
+				<section class="gallery">
+					<div class="row">		
+<!-- left column  -->
+					<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/Monet's House Collection/1.jpg" alt="">
+							</div>
+						</div>					
+					</div>
+<!-- right column -->
+						<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+
+							</div>
+						</div>						
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+
+<div id="modal7" class="modal">
+		<div class="modal-wrapper">
+			<div class="container">
+				<div class="row" style="align-self:center">
+					<div class="col-xs-11"><div class="modal-text">— Baroque Collection</div></div>
+					<div class="col-xs-1 modal-flex-center"><img class="close-modal" src="img/close.png" alt=""></div>
+				</div>
+				<section class="gallery">
+					<div class="row">		
+<!-- left column  -->
+					<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/Baroque Collection/1.jpg" alt="">
+							</div>
+						</div>					
+					</div>
+<!-- right column -->
+						<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+							
+							</div>
+						</div>						
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+
+<div id="modal8" class="modal">
+		<div class="modal-wrapper">
+			<div class="container">
+				<div class="row" style="align-self:center">
+					<div class="col-xs-11"><div class="modal-text">— Granny Сhic Collection</div></div>
+					<div class="col-xs-1 modal-flex-center"><img class="close-modal" src="img/close.png" alt=""></div>
+				</div>
+				<section class="gallery">
+					<div class="row">		
+<!-- left column  -->
+					<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+								<img class="img-fluid" src="img/lingerie designer/Granny Сhic Collection/1.jpg" alt="">
+							</div>
+						</div>					
+					</div>
+<!-- right column -->
+						<div class="col-xs-6">
+						<div class="row">
+							<div class="col-xs-12">
+							
+							</div>
+						</div>						
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
 
 	<footer>
 		<div class="container">
